Реализация изменения тем
-Обработчик ComboBox ThemeChanger
-Создание Словарей ресурсов под обе темы

--- a/GameSessionManager/GameSessionManager/GameSessionManager.csproj
+++ b/GameSessionManager/GameSessionManager/GameSessionManager.csproj
@@ -129,6 +129,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="dark.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="light.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="PresentationLayer\Views\FriendsPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
